nothing works aaaaaargh
Styling ready but almost nothing is shown on the "successfully" compiled page. Routing doesn't work.

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@
 *{
     font-family: 'Oxygen',sans-serif;
 }
+nav{
+    background: #4840DE;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem calc((100vw-1000px)/2);
+    z-index:10;
+}
